#80868 fix shopping cart - product image not visible

--- a/Snowdog_Components/components/Molecules/image/_image.scss
+++ b/Snowdog_Components/components/Molecules/image/_image.scss
@@ -35,6 +35,10 @@ picture {
 }
 
 picture {
+    &.lazyloaded {
+        width: $image__picture-lazyload-width;
+    }
+
     & > img.lazyload,
     & > img.lazyloaded,
     & > img.lazyloading {
